non_executable_reasons_record/197.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=PersonTest

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java

class Person {
  String name;
  int age;
  String address;
  
  Person(String _name, int _age, String _address){
    name = _name;
    age = _age;
    address = _address;
  }
  
  //# ãƒ¡ã‚½ãƒƒãƒ‰ã‚’å®šç¾©
  void say(){
    System.out.println("Name:" + name + " Age:" + age + " Address:" + address);
  }
}

public class ${name} {
  public static void main (String[] args) {

    //# é…åˆ—ã®å®šç¾©ã€‚ã“ã®newã¯é…åˆ—åã®å®£è¨€
    //# é…åˆ—ã®ãƒ‡ãƒ¼ã‚¿å‹[] é…åˆ—å = é…åˆ—ã®è¦ç´ ã®å‹[è¦ç´ æ•°];
    Person[] people = new Person[2];
    //# ã“ã®newã¯ã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã®ç”Ÿæˆ
    people[0] = new Person("Taro", 21, "Tokyo");
    people[1] = new Person("Hanako", 18, "Hokkaido");
    people[0].say();
    people[1].say();
  }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
#javac ${name}.java
javac -encoding UTF-8 ${name}.java

### å®Ÿè¡Œ
java ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-74a6386ad377>"[0;36m, line [0;32m8[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-74a6386ad377>, line 8)

Executability                            : False
